--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.mail.password=ltqarokljzlvbbij
 logging.file.name=logs/errlog.log
 # mysql 查询日志输出
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+aa.bb.cc=aaa
