--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# 数据源
 spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
 spring.datasource.username=root
 spring.datasource.password=root
@@ -11,4 +12,5 @@ spring.mail.password=ltqarokljzlvbbij
 logging.file.name=logs/errlog.log
 # mysql 查询日志输出
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-aa.bb.cc=aaa
+# mybatis-plus 全局主键生成策略
+mybatis-plus.global-config.db-config.id-type=assign_id
