--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ logging.file.name=logs/errlog.log
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 # mybatis-plus 全局主键生成策略
 mybatis-plus.global-config.db-config.id-type=assign_id
+# 服务器
+server.address=10.128.243.167
+server.port=8080
