--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ mybatis-plus.global-config.db-config.id-type=assign_id
 # 服务器
 server.address=10.128.243.167
 server.port=8080
+# redis
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
