动态 Api 接口文档可以访问网址

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ logging.file.name=logs/errlog.log
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 # mybatis-plus 全局主键生成策略
 mybatis-plus.global-config.db-config.id-type=assign_id
-# 服务器
-server.address=10.128.243.167
+# 服务器：连接的 Tomcat 服务器的 ip
+server.address=127.0.0.1
 server.port=8080
 # redis
 spring.redis.host=127.0.0.1
